@@ -116,6 +116,7 @@ class IMP_Smartmobile
             }
 
             $this->view->composeCache = $injector->getInstance('IMP_Factory_Compose')->create()->getCacheId();
+            $this->view->user = $registry->getAuth();
         }
     }
 
